k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskflow
  labels:
    name: taskflow
    app: taskflow
    author: asif-ali-astolixgen
